--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.lifeng.multiprocess.MainActivity">
 
-    <TextView
+
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:text="判读service是否开启，没有开启就开启"
+        tools:layout_editor_absoluteX="78dp"
+        tools:layout_editor_absoluteY="49dp" />
 </android.support.constraint.ConstraintLayout>
